Fix alignment of login/reg forms in desktop view

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -65,6 +65,8 @@ body {
 .input-box form {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 20px;
     margin: 0 auto;
 }
